Fixed nav bar on mobile devices

--- a/styles/global.css
+++ b/styles/global.css
@@ -97,3 +97,10 @@ footer a:hover img {
     font-size: 2.3rem;
   }
 }
+
+@media (max-width: 480px) {
+  nav button {
+    padding: 0.5rem 0.5rem;
+    font-size: 0.9rem;
+  }
+}
